--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 # DATABASE
 PGUSER="PGUSER"
 PGPASS="PGPASS"
-PGHOST="localhost"
-DBNAME="backend"
+PGHOST="postgres"
+DBNAME="localhost"
 PGSCHEMA="public"
-PGPORT=5555
+PGPORT=5432
 
 DATABASE_URL="postgresql://${PGUSER}:${PGPASS}@${PGHOST}:${PGPORT}/${DBNAME}?schema=${PGSCHEMA}"
 
