--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,24 @@
 version: '3.8'
 services:
+  app:
+    container_name: degen-park-api
+    image: degen-park-api
+    build:
+      context: .
+      dockerfile: Dockerfile
+      target: development
+    env_file:
+      - .env
+    ports:
+      - 3000:3000
+    volumes:
+      - .:/usr/src/app
+      - /usr/src/app/node_modules
+    restart: unless-stopped
+    depends_on:
+      - postgres
+      - redis
+
   postgres:
     image: postgis/postgis
     restart: always
@@ -7,7 +26,7 @@ services:
       POSTGRES_USER: PGUSER
       POSTGRES_PASSWORD: PGPASS
     ports:
-      - 5555:5432
+      - 5432:5432
     volumes:
       - monorepodata:/var/lib/postgresql/data
   redis:
