--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "@nestjs/cli": "^10.3.2",
+    "@prisma/client": "^5.15.0",
     "@nestjs/schematics": "^10.1.1",
     "@nestjs/testing": "^10.3.9",
     "@types/bcrypt": "^5.0.2",
