--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,12 +12,12 @@ services:
     ports:
       - 3000:3000
     volumes:
-      - .:/usr/src/app
-      - /usr/src/app/node_modules
+      - .:/usr/src/app/monorepo
     restart: unless-stopped
     depends_on:
       - postgres
       - redis
+    command: npm run start:dev backend
 
   postgres:
     image: postgis/postgis
@@ -29,6 +29,7 @@ services:
       - 5432:5432
     volumes:
       - monorepodata:/var/lib/postgresql/data
+
   redis:
     image: redis
     restart: always
