--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./apps/monorepo/test/jest-e2e.json",
-    "prepare": "husky"
+    "prepare": "husky",
+    "verify-commit": "verify-commit-msg"
   },
   "dependencies": {
     "@nestjs/axios": "^3.0.2",
@@ -43,9 +44,9 @@
   },
   "devDependencies": {
     "@nestjs/cli": "^10.3.2",
-    "@prisma/client": "^5.15.0",
     "@nestjs/schematics": "^10.1.1",
     "@nestjs/testing": "^10.3.9",
+    "@prisma/client": "^5.15.0",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jest": "29.5.12",
@@ -66,7 +67,8 @@
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "4.2.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "verify-commit-msg": "^0.0.14"
   },
   "jest": {
     "moduleFileExtensions": [
